nsg.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus",
    "location": "eastus",
    "name": "dev-vnet-AGSubnet-nsg-eastus",
    "provisioningState": "Succeeded",
    "resourceGroup": "dev",
    "resourceGuid": "3f90aafa-b0eb-4c0e-b750-0aa4eb3a5bcf",
    "securityRules": [
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "222",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowAnyCustom222Inbound",
        "name": "AllowAnyCustom222Inbound",
        "priority": 2721,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowAnyCustom8000Inbound",
        "name": "AllowAnyCustom8000Inbound",
        "priority": 140,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "150",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowAnyCustom150Inbound",
        "name": "AllowAnyCustom150Inbound",
        "priority": 2731,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c1cd3258-ce7d-46db-a8c8-7adba6912adb\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-AGSubnet-nsg-eastus/securityRules/AllowAnyCustom8080Inbound",
        "name": "AllowAnyCustom8080Inbound",
        "priority": 150,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/AGSubnet",
        "resourceGroup": "dev"
      }
    ],
    "tags": {
      "env": "dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus",
    "location": "eastus",
    "name": "dev-vnet-default-nsg-eastus",
    "provisioningState": "Succeeded",
    "resourceGroup": "dev",
    "resourceGuid": "9432d6dd-ec68-4d8e-b922-b2719be1b28d",
    "securityRules": [
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/securityRules/AllowAnySSHInbound",
        "name": "AllowAnySSHInbound",
        "priority": 100,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.254.86/32",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "222",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"a644e7e3-9f90-4e4e-aeb6-8e69554c7683\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-default-nsg-eastus/securityRules/AllowAnyCustom222Inbound",
        "name": "AllowAnyCustom222Inbound",
        "priority": 130,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/default",
        "resourceGroup": "dev"
      }
    ],
    "tags": {
      "env": "dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg",
    "location": "eastus",
    "name": "aks-agentpool-13379102-nsg",
    "provisioningState": "Succeeded",
    "resourceGroup": "mc_aks_rckluster_eastus",
    "resourceGuid": "36e18417-a848-40e9-8a86-4b4c2321e2de",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.85.196.1",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a9056c889ce9f4b3b8f74ae29c28fc38-TCP-80-Internet",
        "name": "a9056c889ce9f4b3b8f74ae29c28fc38-TCP-80-Internet",
        "priority": 500,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.120.126.3",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "15021",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a654a867b487741c2ba7ad37d1bf9041-TCP-15021-Internet",
        "name": "a654a867b487741c2ba7ad37d1bf9041-TCP-15021-Internet",
        "priority": 503,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.120.126.3",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a654a867b487741c2ba7ad37d1bf9041-TCP-80-Internet",
        "name": "a654a867b487741c2ba7ad37d1bf9041-TCP-80-Internet",
        "priority": 504,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.120.126.3",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a654a867b487741c2ba7ad37d1bf9041-TCP-443-Internet",
        "name": "a654a867b487741c2ba7ad37d1bf9041-TCP-443-Internet",
        "priority": 505,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.120.126.3",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "31400",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a654a867b487741c2ba7ad37d1bf9041-TCP-31400-Internet",
        "name": "a654a867b487741c2ba7ad37d1bf9041-TCP-31400-Internet",
        "priority": 506,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.120.126.3",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "15443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a654a867b487741c2ba7ad37d1bf9041-TCP-15443-Internet",
        "name": "a654a867b487741c2ba7ad37d1bf9041-TCP-15443-Internet",
        "priority": 507,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "52.188.142.134",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/ae0cd4627a4174404bc87af061e6f7e7-TCP-80-Internet",
        "name": "ae0cd4627a4174404bc87af061e6f7e7-TCP-80-Internet",
        "priority": 508,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.83.133.209",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a0901b52a9e08409e924b75c894ae6a4-TCP-8080-Internet",
        "name": "a0901b52a9e08409e924b75c894ae6a4-TCP-8080-Internet",
        "priority": 501,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.121.241.20",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a39a865b849ef424b927a70330fc81e1-TCP-8000-Internet",
        "name": "a39a865b849ef424b927a70330fc81e1-TCP-8000-Internet",
        "priority": 502,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.88.162.162",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8081",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"bcfa47ff-bee5-4ae4-8a32-fd39f777cf3b\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_rckluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-13379102-nsg/securityRules/a20e40a9edfd440699cd44f520810283-TCP-8081-Internet",
        "name": "a20e40a9edfd440699cd44f520810283-TCP-8081-Internet",
        "priority": 509,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_rckluster_eastus",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_aks_rckluster_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-13379102/subnets/aks-subnet",
        "resourceGroup": "MC_aks_rckluster_eastus"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"fc9e2557-ecda-4303-b6ca-fd6e5ca769c7\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-26200804-nsg",
    "location": "eastus",
    "name": "aks-agentpool-26200804-nsg",
    "provisioningState": "Succeeded",
    "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus",
    "resourceGuid": "f6d825f9-f125-4f3e-a3ca-2f6760501046",
    "securityRules": [],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_testaks_MyAKSStandardCluster_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-26200804/subnets/aks-subnet",
        "resourceGroup": "MC_testaks_MyAKSStandardCluster_eastus"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg",
    "location": "northcentralus",
    "name": "arcus-linux-vm2-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkInterfaces/arcus-linux-vm2328",
        "resourceGroup": "juniper"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "juniper",
    "resourceGuid": "c0f962f5-3fa1-4db8-889d-64e63e79cc8a",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "222",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/securityRules/SSH",
        "name": "SSH",
        "priority": 300,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "1280",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/securityRules/Allow1280InBound",
        "name": "Allow1280InBound",
        "priority": 192,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "16000-65535",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/securityRules/Allow16000to65535",
        "name": "Allow16000to65535",
        "priority": 194,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"633978be-49b3-4286-b712-996b3d0edb56\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/arcus-linux-vm2-nsg/securityRules/AllowAnyCustom8080Inbound",
        "name": "AllowAnyCustom8080Inbound",
        "priority": 180,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg",
    "location": "northcentralus",
    "name": "defaultsn-nsg",
    "provisioningState": "Succeeded",
    "resourceGroup": "juniper",
    "resourceGuid": "54c2dfc6-74a9-456c-9016-7d8ffaa0e700",
    "securityRules": [
      {
        "access": "Allow",
        "description": "Allow InBound SSH traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "222",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/securityRules/AllowSSHInBound",
        "name": "AllowSSHInBound",
        "priority": 190,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "1280",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/securityRules/Allow1280InBound",
        "name": "Allow1280InBound",
        "priority": 195,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "16000-65535",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/securityRules/Allow16000to65535",
        "name": "Allow16000to65535",
        "priority": 193,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"ea812072-2a5e-40b5-a0c2-069806e5c058\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/defaultsn-nsg/securityRules/AllowAnyCustom8080Inbound",
        "name": "AllowAnyCustom8080Inbound",
        "priority": 180,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/virtualNetworks/juniper-vnet/subnets/default",
        "resourceGroup": "juniper"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg",
    "location": "northcentralus",
    "name": "ssr-arcus-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkInterfaces/ssr-arcus883",
        "resourceGroup": "juniper"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "juniper",
    "resourceGuid": "924d5ddb-1d44-496e-be3a-7ae630d4ce99",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/securityRules/SSH",
        "name": "SSH",
        "priority": 1010,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/securityRules/HTTPs",
        "name": "HTTPs",
        "priority": 1020,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "1280",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/securityRules/AllowAnyCustom1280Inbound",
        "name": "AllowAnyCustom1280Inbound",
        "priority": 1030,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "16000-65535",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d1983402-3fce-413a-b981-fa239204c6ee\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/juniper/providers/Microsoft.Network/networkSecurityGroups/ssr-arcus-nsg/securityRules/AllowAnyCustom16000-65535Inbound",
        "name": "AllowAnyCustom16000-65535Inbound",
        "priority": 1040,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "juniper",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2",
    "location": "eastus2",
    "name": "aks-vnet-default-nsg-eastus2",
    "provisioningState": "Succeeded",
    "resourceGroup": "aks",
    "resourceGuid": "90323f9f-799d-4242-9342-278452f52230",
    "securityRules": [
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4797f8ce-c602-47d5-a3f1-4216a44dac0f\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-default-nsg-eastus2/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/default",
        "resourceGroup": "aks"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2",
    "location": "eastus2",
    "name": "aks-vnet-virtual-node-aci-nsg-eastus2",
    "provisioningState": "Succeeded",
    "resourceGroup": "aks",
    "resourceGuid": "bab89a2f-9b73-4c44-ac12-87a93aee1e11",
    "securityRules": [
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d48d83d7-828f-41a0-bcab-148ed44a2f6e\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/networkSecurityGroups/aks-vnet-virtual-node-aci-nsg-eastus2/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "aks",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/aks/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/virtual-node-aci",
        "resourceGroup": "aks"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2",
    "location": "eastus2",
    "name": "devvnet259-AzureBastionSubnet-nsg-eastus2",
    "provisioningState": "Succeeded",
    "resourceGroup": "dev",
    "resourceGuid": "2475a84c-3dbe-48e1-80d2-25316a0f8a81",
    "securityRules": [
      {
        "access": "Allow",
        "description": "Allow GatewayManager",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowGatewayManager",
        "name": "AllowGatewayManager",
        "priority": 2702,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "GatewayManager",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "Allow HTTPs",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowHttpsInBound",
        "name": "AllowHttpsInBound",
        "priority": 2703,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRanges": [
          "22",
          "3389"
        ],
        "direction": "Outbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowSshRdpOutbound",
        "name": "AllowSshRdpOutbound",
        "priority": 100,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "AzureCloud",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowAzureCloudOutbound",
        "name": "AllowAzureCloudOutbound",
        "priority": 110,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"5e1d600a-4ded-47b4-89f1-aa035f872e53\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-AzureBastionSubnet-nsg-eastus2/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/devvnet259/subnets/AzureBastionSubnet",
        "resourceGroup": "dev"
      }
    ],
    "tags": {
      "env": "dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2",
    "location": "eastus2",
    "name": "devvnet259-default-nsg-eastus2",
    "provisioningState": "Succeeded",
    "resourceGroup": "dev",
    "resourceGuid": "a948824d-0e8e-45f8-b386-4b89487cf9e4",
    "securityRules": [
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowCorpnet",
        "name": "AllowCorpnet",
        "priority": 2700,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetPublic",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowSAW",
        "name": "AllowSAW",
        "priority": 2701,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "CorpNetSaw",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/Home",
        "name": "Home",
        "priority": 2711,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.237.187",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowMyIpAddressCustom3389Inbound",
        "name": "AllowMyIpAddressCustom3389Inbound",
        "priority": 2741,
        "protocol": "UDP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.254.86",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowAnyRDPInbound",
        "name": "AllowAnyRDPInbound",
        "priority": 2751,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowAnyHTTPInbound",
        "name": "AllowAnyHTTPInbound",
        "priority": 2761,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "50001",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowAnyCustom50001Inbound",
        "name": "AllowAnyCustom50001Inbound",
        "priority": 2771,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5005",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowAnyCustom5005Inbound",
        "name": "AllowAnyCustom5005Inbound",
        "priority": 1001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5005",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowMyIpAddressCustom5005Inbound",
        "name": "AllowMyIpAddressCustom5005Inbound",
        "priority": 2781,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.254.86",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5005",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowCidrBlockCustom5005Inbound",
        "name": "AllowCidrBlockCustom5005Inbound",
        "priority": 2791,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "2600:4040:2500:fe00:d1f3:42cf:2577:f18a",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5005",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/Allow5005",
        "name": "Allow5005",
        "priority": 2802,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.254.86",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "50000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowAnyCustom50000Inbound",
        "name": "AllowAnyCustom50000Inbound",
        "priority": 2812,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "50000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"70e3b940-fe75-493d-85d8-133d9fa57c49\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/devvnet259-default-nsg-eastus2/securityRules/AllowMyIpAddressCustom50000Inbound",
        "name": "AllowMyIpAddressCustom50000Inbound",
        "priority": 2822,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "71.241.254.86",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/devvnet259/subnets/default",
        "resourceGroup": "dev"
      }
    ],
    "tags": {
      "env": "dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg",
    "location": "eastus2",
    "name": "win10-vs-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkInterfaces/win10-vs626",
        "resourceGroup": "dev"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "dev",
    "resourceGuid": "9b185c59-e8a7-4ffd-8bfa-82c256451cb3",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/RDP",
        "name": "RDP",
        "priority": 100,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefixes": [
          "70.110.27.180",
          "71.241.237.187"
        ],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/Port_80",
        "name": "Port_80",
        "priority": 300,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "80",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/Port_8080",
        "name": "Port_8080",
        "priority": 310,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "13.72.86.65/32",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/SQL",
        "name": "SQL",
        "priority": 320,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "13.72.86.65/32",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/AllowAnyRDPInbound",
        "name": "AllowAnyRDPInbound",
        "priority": 330,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "50000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"d32575cc-53cf-44b0-84d7-b8010f84ad34\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/win10-vs-nsg/securityRules/AllowAnyCustom50000Inbound",
        "name": "AllowAnyCustom50000Inbound",
        "priority": 340,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "tags": {
      "env": "dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
    "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg",
    "location": "eastus2",
    "name": "aks-agentpool-28186438-nsg",
    "provisioningState": "Succeeded",
    "resourceGroup": "mc_aks_kone_eastus2",
    "resourceGuid": "7fd08605-bdc9-43f1-aaaa-76d1e64a9c3f",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.234.211",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "15021",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7b4a3e4c44ef4bc68f042773858e5a4-TCP-15021-Internet",
        "name": "a7b4a3e4c44ef4bc68f042773858e5a4-TCP-15021-Internet",
        "priority": 500,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.234.211",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7b4a3e4c44ef4bc68f042773858e5a4-TCP-80-Internet",
        "name": "a7b4a3e4c44ef4bc68f042773858e5a4-TCP-80-Internet",
        "priority": 501,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.234.211",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7b4a3e4c44ef4bc68f042773858e5a4-TCP-443-Internet",
        "name": "a7b4a3e4c44ef4bc68f042773858e5a4-TCP-443-Internet",
        "priority": 502,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.234.211",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "31400",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7b4a3e4c44ef4bc68f042773858e5a4-TCP-31400-Internet",
        "name": "a7b4a3e4c44ef4bc68f042773858e5a4-TCP-31400-Internet",
        "priority": 503,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.234.211",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "15443",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7b4a3e4c44ef4bc68f042773858e5a4-TCP-15443-Internet",
        "name": "a7b4a3e4c44ef4bc68f042773858e5a4-TCP-15443-Internet",
        "priority": 504,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.88.127.26",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a3f1c4006c8ac4d54bebd3b55434299b-TCP-80-Internet",
        "name": "a3f1c4006c8ac4d54bebd3b55434299b-TCP-80-Internet",
        "priority": 505,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.7.236.77",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/ac9c7e363ce4e4e9993a955159a764ed-TCP-80-Internet",
        "name": "ac9c7e363ce4e4e9993a955159a764ed-TCP-80-Internet",
        "priority": 507,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.163.230",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "80",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/a7cc735cfc1494ebba30a88bd1cb0f13-TCP-80-Internet",
        "name": "a7cc735cfc1494ebba30a88bd1cb0f13-TCP-80-Internet",
        "priority": 506,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.96.142.237",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "6333",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"14ab1b82-73f1-4bac-9af5-f0f7ff6afd37\"",
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/mc_aks_kone_eastus2/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-28186438-nsg/securityRules/ade097939df3841b698187b799a6c450-TCP-6333-Internet",
        "name": "ade097939df3841b698187b799a6c450-TCP-6333-Internet",
        "priority": 508,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_aks_kone_eastus2",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/917416c8-760a-45f2-a774-671813cee4f9/resourceGroups/MC_aks_kone_eastus2/providers/Microsoft.Network/virtualNetworks/aks-vnet-28186438/subnets/aks-subnet",
        "resourceGroup": "MC_aks_kone_eastus2"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
